<resources>
    <string name="app_name">Buy Me A Drink</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_old_password">Old password (or leave empty)</string>
    <string name="hint_new_password">New password</string>
    <string name="btn_register">Register</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="btn_log_in">Log in</string>
    <string name="btn_save">Save</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_answer">Answer</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>

    <string name="act_name_register">Register</string>
    <string name="act_name_log_in">Log in</string>

    <string name="action_settings">Settings</string>
    <string name="err_msg_old_password">Your old password is not correct!</string>
    <string name="no_data">No data</string>
    <string name="rating">Rating</string>

    <string name="add_question_category">Category:</string>
    <string name="add_question_add">Add</string>
    <string name="add_question_answer_a">Answer A</string>
    <string name="add_question_answer_b">Answer B</string>
    <string name="add_question_answer_c">Answer C</string>
    <string name="add_question_answer_d">Answer D</string>
    <string name="add_question_question">Question</string>

    <string name="add_question_err_msg_empty_answer">Enter Answer</string>
    <string name="add_question_err_msg_empty_question">Enter Question</string>
    <string name="add_question_err_msg_empty_prize">Enter Prize</string>
    <string name="add_question_err_msg_empty_code">Enter Code</string>
    <string name="add_question_true_answer">True answer is:</string>
    <string name="add_question_prize">Prize</string>
    <string name="add_question_code">Code</string>
    <string name="add_friend_activity_select_friend">Select friend which you want to add in your friends</string>

    <string-array name="add_question_category_array">
        <item>Geography</item>
        <item>Physics</item>
        <item>Computer science</item>
        <item>Math</item>
    </string-array>
    <string-array name="add_question_true_answer_array">
        <item>Answer A</item>
        <item>Answer B</item>
        <item>Answer C</item>
        <item>Answer D</item>
    </string-array>
</resources>
