<?xml version="1.0" encoding="utf-8"?>
<!--<LinearLayout-->
    <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--tools:context=".UserProfileActivity"-->
    <!--tools:showIn="@layout/activity_user_profile">-->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".UserProfileActivity"
    tools:showIn="@layout/activity_user_profile">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                          xmlns:tools="http://schemas.android.com/tools"
                          android:layout_width="match_parent"
                          android:layout_height="match_parent"
                          android:paddingLeft="@dimen/activity_horizontal_margin"
                          android:paddingRight="@dimen/activity_horizontal_margin"
                          android:paddingTop="@dimen/activity_vertical_margin"
                          android:paddingBottom="@dimen/activity_vertical_margin"
                          tools:context=".UserProfileActivity"
                          android:orientation="vertical"
                          android:weightSum="1">


                <com.android.volley.toolbox.NetworkImageView
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:id="@+id/user_profile_imageView"
                    android:background="@drawable/elevation_rectange"
                    android:elevation="8dp"
                    android:layout_gravity="center_horizontal" />

                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ratingBar"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"/>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/user_profile_input_layout_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/user_profile_input_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:hint="@string/hint_name"
                        />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/user_profile_input_layout_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/user_profile_input_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:hint="@string/hint_email"
                        android:enabled="false"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/user_profile_input_layout_old_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/user_profile_input_old_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:hint="@string/hint_old_password"
                        />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/user_profile_input_layout_new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/user_profile_input_new_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:hint="@string/hint_new_password"
                        />
                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:weightSum="1">

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_save"
                        android:id="@+id/user_profile_save_btn"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="1" />

                    <Button
                        android:layout_width="174dp"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_cancel"
                        android:id="@+id/user_profile_cancel_btn" />
                </LinearLayout>

            </LinearLayout>
    </ScrollView>
</RelativeLayout>
<!--</LinearLayout>-->
