<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:padding="@dimen/activity_horizontal_margin">
        <TextView
            android:id="@+id/dialog_answer_on_the_question_answer_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_data"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#212121"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toLeftOf="@+id/dialog_answer_on_the_question_radio_a"
            android:layout_toStartOf="@+id/dialog_answer_on_the_question_radio_a"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dialog_answer_on_the_question_radio_a"
            android:checked="false"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:padding="@dimen/activity_horizontal_margin">


        <TextView
            android:id="@+id/dialog_answer_on_the_question_answer_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_data"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#212121"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toLeftOf="@+id/dialog_answer_on_the_question_radio_b"
            android:layout_toStartOf="@+id/dialog_answer_on_the_question_radio_b"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dialog_answer_on_the_question_radio_b"
            android:checked="false"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:padding="@dimen/activity_horizontal_margin">


        <TextView
            android:id="@+id/dialog_answer_on_the_question_answer_c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_data"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#212121"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toLeftOf="@+id/dialog_answer_on_the_question_radio_c"
            android:layout_toStartOf="@+id/dialog_answer_on_the_question_radio_c"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dialog_answer_on_the_question_radio_c"
            android:checked="false"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:padding="@dimen/activity_horizontal_margin">


        <TextView
            android:id="@+id/dialog_answer_on_the_question_answer_d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_data"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#212121"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toLeftOf="@+id/dialog_answer_on_the_question_radio_d"
            android:layout_toStartOf="@+id/dialog_answer_on_the_question_radio_d"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dialog_answer_on_the_question_radio_d"
            android:checked="false"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_cancel"
            android:id="@+id/dialog_answer_on_the_question_cancel_btn"
            android:layout_weight="1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_answer"
            android:id="@+id/dialog_answer_on_the_question_answer_btn"
            android:layout_weight="1"/>

    </LinearLayout>
</LinearLayout>